neonize/neonize-linux-amd64.h

extern char* PutMutedUntil(char* id, unsigned char* user, int userSize, float mutedUntil);
extern struct BytesReturn* GetChatSettings(char* id, unsigned char* user, int userSize);
extern struct BytesReturn* PutPushName(char* id, unsigned char* user, int userSize, char* pushname);
extern char* PutContactName(char* id, unsigned char* user, int userSize, char* fullName, char* firstName);
extern char* PutAllContactNames(char* id, unsigned char* contacts, int contactsSize);
extern struct BytesReturn* GetContact(char* id, unsigned char* user, int userSize);
extern struct BytesReturn* GetAllContacts(char* id);
extern char* GenerateMessageID(char* id);
extern void StopAll();
extern void Stop(char* id);
extern char* SetGroupName(char* id, unsigned char* JIDByte, int JIDSize, char* name);
extern char* LeaveGroup(char* id, unsigned char* JIDByte, int JIDSize);
extern char* JoinGroupWithInvite(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* inviterByte, int inviterSize, char* code, int expiration);
extern char* LinkGroup(char* id, unsigned char* parent, int parentSize, unsigned char* child, int childSize);
extern char* SendChatPresence(char* id, unsigned char* JIDByte, int JIDSize, int state, int media);
extern char* FollowNewsletter(char* id, unsigned char* jid, int size);
extern char* Logout(char* id);
extern char* MarkRead(char* id, char* ids, int timestamp, unsigned char* chatByte, int chatSize, unsigned char* senderByte, int senderSize, char* receiptType);
extern char* NewsletterMarkViewed(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* MessageServerID, int MessageServerIDSize);
extern char* NewsletterSendReaction(char* id, unsigned char* JIDByte, int JIDSize, int messageServerID, char* reaction, char* messageID);
extern char* NewsletterToggleMute(char* id, unsigned char* JIDByte, int JIDSize, _Bool mute);
extern char* SendAppState(char* id, unsigned char* patchByte, int patchSize);
extern char* ClearChat(char* id, unsigned char* JIDByte, int JIDSize);
extern char* SetDefaultDisappearingTimer(char* id, int64_t timer);
extern char* SetDisappearingTimer(char* id, unsigned char* JIDByte, int JIDSize, int64_t timer, int64_t settingTS);
extern void SetAutomaticMessageRerequestFromPhone(char* id, _Bool enabled);
extern char* SetGroupAnnounce(char* id, unsigned char* JIDByte, int JIDSize, _Bool announce);
extern char* SetGroupLocked(char* id, unsigned char* JIDByte, int JIDSize, _Bool locked);
extern char* SetGroupTopic(char* id, unsigned char* JIDByte, int JIDSize, char* previousID, char* newID, char* topic);
extern struct BytesReturn* SetPrivacySetting(char* id, char* name, char* value);
extern char* SetPassive(char* id, _Bool passive);
extern char* SetStatusMessage(char* id, char* msg);
extern char* SubscribePresence(char* id, unsigned char* JIDByte, int JIDSize);
extern char* UnfollowNewsletter(char* id, unsigned char* JIDByte, int JIDSize);
extern char* UnlinkGroup(char* id, unsigned char* parentByte, int parentSize, unsigned char* childByte, int childSize);
extern struct BytesReturn* UpdateBlocklist(char* id, unsigned char* jidByte, int JIDSize, char* action);
extern struct BytesReturn* UpdateGroupParticipants(char* id, unsigned char* JIDByte, int JIDSize, unsigned char* participantsChanges, int participantSize, char* action);
extern struct BytesReturn* GetMessageForRetry(char* id, unsigned char* requester, int requesterSize, unsigned char* to, int toSize, char* messageID);
// chat_settings_store.go
//
extern char* PutPinned(char* id, unsigned char* user, int userSize, _Bool pinned);
extern char* PutArchived(char* id, unsigned char* user, int userSize, _Bool archived);
extern char* GetAllDevices(char* db, ptr_to_python_function_callback_bytes2 logCb);
extern char* SendPresence(char* id, char* presence);
extern struct BytesReturn* DecryptPollVote(char* id, unsigned char* message, int messageSize);
extern struct BytesReturn* SendFBMessage(char* id, unsigned char* to, int toSize, unsigned char* message, int messageSize, unsigned char* metadata, int metadataSize, unsigned char* extra, int extraSize);
extern void FreeBytesStruct(struct BytesReturn* bytesReturn);