neonize/_binder.py

    gocode.SetAutomaticMessageRerequestFromPhone.argtypes = [ctypes.c_char_p, ctypes.c_bool]
    gocode.SetAutomaticMessageRerequestFromPhone.restype = ctypes.c_void_p
    gocode.SetGroupAnnounce.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_bool,
    ]
    gocode.SetGroupAnnounce.restype = ctypes.c_void_p
    gocode.SetGroupLocked.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_bool,
    ]
    gocode.SetGroupLocked.restype = ctypes.c_void_p
    gocode.SetGroupTopic.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_char_p,
    ]
    gocode.SetGroupTopic.restype = ctypes.c_void_p
    gocode.SetPrivacySetting.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_char_p,
    ]
    gocode.SetPrivacySetting.restype = ctypes.POINTER(Bytes)
    gocode.SetPassive.argtypes = [ctypes.c_char_p, ctypes.c_bool]
    gocode.SetPassive.restype = ctypes.c_void_p
    gocode.SetStatusMessage.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
    gocode.SetStatusMessage.restype = ctypes.c_void_p
    gocode.SubscribePresence.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_int]
    gocode.SubscribePresence.restype = ctypes.c_void_p
    gocode.UnfollowNewsletter.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
    ]
    gocode.UnfollowNewsletter.restype = ctypes.c_void_p
    gocode.UnlinkGroup.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
    ]
    gocode.UnlinkGroup.restype = ctypes.c_void_p
    gocode.UpdateBlocklist.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
    ]
    gocode.UpdateBlocklist.restype = ctypes.POINTER(Bytes)
    gocode.UpdateGroupParticipants.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
    ]
    gocode.UpdateGroupParticipants.restype = ctypes.POINTER(Bytes)
    gocode.GetMessageForRetry.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
    ]
    gocode.GetMessageForRetry.restype = ctypes.POINTER(Bytes)
    gocode.PutPushName.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
    ]
    gocode.PutPushName.restype = ctypes.POINTER(Bytes)
    gocode.PutContactName.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_char_p,
    ]
    gocode.PutContactName.restype = ctypes.c_void_p
    gocode.PutAllContactNames.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
    ]
    gocode.PutAllContactNames.restype = ctypes.c_void_p
    gocode.GetContact.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_int]
    gocode.GetContact.restype = ctypes.POINTER(Bytes)
    gocode.GetAllContacts.argtypes = [ctypes.c_char_p]
    gocode.GetAllContacts.restype = ctypes.POINTER(Bytes)
    gocode.PutMutedUntil.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_float,
    ]
    gocode.PutMutedUntil.restype = ctypes.c_void_p
    gocode.PutPinned.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_bool,
    ]
    gocode.PutPinned.restype = ctypes.c_void_p
    gocode.PutArchived.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_bool,
    ]
    gocode.PutArchived.restype = ctypes.c_void_p
    # ClearChat is now implemented in pure Python (aioze/client.py ChatSettingsStore.clear_chat)
    # No Go binding needed - uses send_app_state() directly
    gocode.GetChatSettings.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_int]
    gocode.GetChatSettings.restype = ctypes.POINTER(Bytes)
    gocode.GetAllDevices.argtypes = [ctypes.c_char_p, func_callback_bytes2]
    gocode.GetAllDevices.restype = ctypes.c_void_p
    gocode.SendFBMessage.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
    ]
    gocode.SendFBMessage.restype = ctypes.POINTER(Bytes)
    gocode.SendPresence.argtypes = [ctypes.c_char_p, ctypes.c_char_p]
    gocode.SendPresence.restype = ctypes.c_void_p
    gocode.DecryptPollVote.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_int]
    gocode.DecryptPollVote.restype = ctypes.POINTER(Bytes)
    gocode.Stop.argtypes = [ctypes.c_char_p]
    gocode.Stop.restype = ctypes.c_void_p
    gocode.StopAll.argtypes = []
    gocode.StopAll.restype = ctypes.c_void_p
    gocode.FreeBytesStruct.argtypes = [ctypes.POINTER(Bytes)]
    gocode.FreeBytesStruct.restype = None
    gocode.FreeString.argtypes = [ctypes.c_void_p]
    gocode.FreeString.restype = None
    # pprof profiling server for memory debugging
    gocode.StartPprof.argtypes = [ctypes.c_int]
    gocode.StartPprof.restype = ctypes.c_void_p

    # =========================================================================
    # MEMORY LEAK FIX WRAPPERS
    # =========================================================================
    # Go CGO functions return patterns that require different handling:
    # 1. *C.char returns: Use c_void_p + _wrap_cstring_return + FreeString
    # 2. *C.struct_BytesReturn: Use POINTER(Bytes) + _wrap_bytes_return + FreeBytesStruct
    # =========================================================================

    def _wrap_bytes_return(func):
        """Wrap Go function returning BytesReturn. Returns Python bytes, frees memory."""
        def wrapper(*args):
            bytes_ptr = func(*args)
            if not bytes_ptr:
                return b""
            result = bytes_ptr.contents.get_bytes()
            gocode.FreeBytesStruct(bytes_ptr)
            return result
        return wrapper

    def _wrap_cstring_return(func):
        """Wrap Go function returning *C.char. Returns Python string, frees memory."""
        def wrapper(*args):
            ptr = func(*args)  # c_void_p
            if not ptr:
                return ""
            result = ctypes.cast(ptr, ctypes.c_char_p).value.decode()
            gocode.FreeString(ptr)
            return result
        return wrapper

    # C string returns (Go returns *C.char via C.CString, freed with FreeString)
    gocode.PutContactName = _wrap_cstring_return(gocode.PutContactName)
    gocode.PutAllContactNames = _wrap_cstring_return(gocode.PutAllContactNames)
    gocode.PutMutedUntil = _wrap_cstring_return(gocode.PutMutedUntil)
    gocode.MarkRead = _wrap_cstring_return(gocode.MarkRead)
    gocode.SendChatPresence = _wrap_cstring_return(gocode.SendChatPresence)
    gocode.GenerateMessageID = _wrap_cstring_return(gocode.GenerateMessageID)
    gocode.PutPinned = _wrap_cstring_return(gocode.PutPinned)
    gocode.PutArchived = _wrap_cstring_return(gocode.PutArchived)
    gocode.SetGroupName = _wrap_cstring_return(gocode.SetGroupName)
    gocode.LeaveGroup = _wrap_cstring_return(gocode.LeaveGroup)
    gocode.LinkGroup = _wrap_cstring_return(gocode.LinkGroup)
    gocode.Logout = _wrap_cstring_return(gocode.Logout)
    gocode.NewsletterMarkViewed = _wrap_cstring_return(gocode.NewsletterMarkViewed)
    gocode.NewsletterSendReaction = _wrap_cstring_return(gocode.NewsletterSendReaction)
    gocode.NewsletterToggleMute = _wrap_cstring_return(gocode.NewsletterToggleMute)
    gocode.SendAppState = _wrap_cstring_return(gocode.SendAppState)
    gocode.FetchAppState = _wrap_cstring_return(gocode.FetchAppState)
    gocode.ClearAppState = _wrap_cstring_return(gocode.ClearAppState)
    gocode.SetDefaultDisappearingTimer = _wrap_cstring_return(gocode.SetDefaultDisappearingTimer)
    gocode.SetDisappearingTimer = _wrap_cstring_return(gocode.SetDisappearingTimer)
    gocode.SetGroupAnnounce = _wrap_cstring_return(gocode.SetGroupAnnounce)
    gocode.SetGroupLocked = _wrap_cstring_return(gocode.SetGroupLocked)
    gocode.SetGroupTopic = _wrap_cstring_return(gocode.SetGroupTopic)
    gocode.SetPassive = _wrap_cstring_return(gocode.SetPassive)
    gocode.SetStatusMessage = _wrap_cstring_return(gocode.SetStatusMessage)
    gocode.SubscribePresence = _wrap_cstring_return(gocode.SubscribePresence)
    gocode.UnfollowNewsletter = _wrap_cstring_return(gocode.UnfollowNewsletter)
    gocode.UnlinkGroup = _wrap_cstring_return(gocode.UnlinkGroup)
    gocode.FollowNewsletter = _wrap_cstring_return(gocode.FollowNewsletter)
    gocode.SendPresence = _wrap_cstring_return(gocode.SendPresence)
    gocode.SetPrivacySetting = _wrap_bytes_return(gocode.SetPrivacySetting)
    gocode.JoinGroupWithInvite = _wrap_cstring_return(gocode.JoinGroupWithInvite)
    gocode.GetAllDevices = _wrap_cstring_return(gocode.GetAllDevices)
